fix the compatibility issues on IE8, IE9, IE10 or above

--- a/ShadowStock/content/site.css
+++ b/ShadowStock/content/site.css
@@ -101,3 +101,7 @@ iframe.impexp {
 .container-impexp {
     width: 500px;
 }
+
+#stockTable td.btn-default {
+    background-color: transparent;
+}
